# qtwebcall

./: CMakeLists.txt  CMakePresets.json  README.md  asyncfetcher.cpp  asyncfetcher.h  jsonfetcher.cpp  jsonfetcher.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  quotefetcher.cpp  quotefetcher.h  quotewidget.cpp  quotewidget.h  raiiguard.h  util.cpp  util.h
.qt/: QtDeploySupport.cmake
